# smart_data_collection

./: CMakeLists.txt  package.xml
launch/: smart_data_collection.launch
nodes/: smart_data_collection
saved_path/: scan_positions.csv
src/smart_data_collection/: smart_data_collection.py  smart_data_collection.py.BACKUP.16062022  smart_data_collection.py.BACKUP.24052022
